Don't ignore Vanilla Tweaks info

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@
 !resourcepacks/*
 !resourcepacks/*/pack.mcmeta
 
+!resourcepacks/VanillaTweaks_r*_MC*.*.*/Selected Packs.txt
+
 !schematics
 !schematics/*
 
