Add all config files

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@
 !config
 !config/*.cfg
 !config/*.json
+!config/*.txt
+!config/*.json5
+!config/*.properties
+!config/*.conf
+!config/*.toml
 
 !wurst
 !wurst/*
