Update mod configs

--- a/config/iris.properties
+++ b/config/iris.properties
@@ -1,8 +1,8 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Sun Sep 29 20:57:59 IST 2024
+#Mon Oct 07 23:07:15 IST 2024
 colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
 enableShaders=false
 maxShadowRenderDistance=32
-shaderPack=Sildur's Enhanced Default v1.16 Fancy.zip
+shaderPack=BSL_v8.2.09.zip
