--- a/config/worldedit/worldedit.properties
+++ b/config/worldedit/worldedit.properties
@@ -1,5 +1,5 @@
 #Don't put comments; they get removed
-#Thu Oct 10 21:45:08 IST 2024
+#Fri Nov 01 17:13:44 GMT 2024
 allow-symbolic-links=false
 butcher-default-radius=-1
 butcher-max-radius=-1
