--- a/config/fabric/indigo-renderer.properties
+++ b/config/fabric/indigo-renderer.properties
@@ -1,5 +1,5 @@
 #Indigo properties file
-#Mon Oct 07 23:07:13 IST 2024
+#Tue Nov 05 17:54:37 GMT 2024
 always-tesselate-blocks=auto
 ambient-occlusion-mode=hybrid
 debug-compare-lighting=auto
