--- a/config/iris.properties
+++ b/config/iris.properties
@@ -1,5 +1,5 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Mon Oct 07 23:07:15 IST 2024
+#Tue Nov 05 17:54:40 GMT 2024
 colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
