--- a/config/vmp.properties
+++ b/config/vmp.properties
@@ -1,5 +1,5 @@
 #Configuration file for VMP
-#Mon Oct 07 23:07:00 IST 2024
+#Tue Nov 05 17:54:23 GMT 2024
 exp_use_optimized_chunk_ticking_iteration=false
 optimized_entity_tracking_use_staging_area=true
 show_async_loading_messages=true
