--- a/config/c2me.toml
+++ b/config/c2me.toml
@@ -54,7 +54,7 @@ globalExecutorParallelism = "default"
 		enableExtRenderDistanceProtocol = "default"
 		# (Default: true) Whether to modify maximum view distance
 		# Set to false for the following reasons: 
-		# Incompatible with bobby@5.2.2+mc1.21 (*) (defined in c2me) 
+		# Incompatible with bobby@5.2.4+mc1.21 (*) (defined in c2me) 
 		enabled = "default"
 		# (Default: 66) Max render distance allowed in game options
 		maxViewDistance = "default"
@@ -117,13 +117,6 @@ globalExecutorParallelism = "default"
 		mode = "default"
 
 [ioSystem]
-	# (Default: true) Whether to use async chunk loading & unloading
-	async = "default"
-	# (Default: false) Whether to recover from errors when loading chunks 
-	#  This will cause errored chunk to be regenerated entirely, which may cause data loss 
-	#  Only applies when async chunk loading is enabled
-	# 
-	recoverFromErrors = "default"
 	# (Default: false) EXPERIMENTAL FEATURE
 	# This replaces the way your chunks are saved.
 	# Please keep regular backups of your world if you are using this feature,
@@ -133,7 +126,7 @@ globalExecutorParallelism = "default"
 	# (may cause incompatibility with other mods)
 	# 
 	# Set to false for the following reasons: 
-	# Incompatible with architectury@13.0.1 (*) (defined in c2me) 
+	# Incompatible with architectury@13.0.8 (*) (defined in c2me) 
 	gcFreeChunkSerializer = "default"
 	# (Default: true) Whether to use the optimized implementation of IO system
 	replaceImpl = "default"
@@ -142,20 +135,55 @@ globalExecutorParallelism = "default"
 	# (Default: 32678) Hard limit for io worker nbt cache
 	chunkDataCacheLimit = "default"
 
-[threadedWorldGen]
-	# (Default: true) Whether to allow feature generation (world decorations like trees, ores and etc.) run in parallel
-	# (may cause incompatibility with other mods)
-	allowThreadedFeatures = "default"
-	# (Default: true) Whether to enable this feature
-	enabled = "default"
-
 [vanillaWorldGenOptimizations]
+	# (Default: true) Whether to enable StructureWeightSampler optimizations to accelerate world generation
+	# 
+	optimizeStructureWeightSampler = "default"
 	# (Default: true) Whether to enable aquifer optimizations to accelerate overworld worldgen
 	# (may cause incompatibility with other mods)
 	optimizeAquifer = "default"
+	# (Default: false) Whether to use density function compiler to accelerate world generation
+	# 
+	# Density function: https://minecraft.wiki/w/Density_function
+	# 
+	# This functionality compiles density functions from world generation
+	# datapacks (including vanilla generation) to JVM bytecode to increase
+	# performance by allowing JVM JIT to better optimize the code
+	# 
+	# Currently, all functions provided by vanilla are implemented.
+	# Chunk upgrades from pre-1.18 versions are not implemented and will
+	# fall back to the unoptimized version of density functions.
+	# 
+	useDensityFunctionCompiler = "default"
 	# (Default: true) Whether to enable End Biome Cache to accelerate The End worldgen 
 	# This is no longer included in lithium-fabric 
 	# (may cause incompatibility with other mods)
 	# 
 	useEndBiomeCache = "default"
+
+[chunkSystem]
+	# (Default: true) Whether to enable async serialization
+	# 
+	asyncSerialization = "default"
+	# (Default: false) Whether to recover from errors when loading chunks 
+	#  This will cause errored chunk to be regenerated entirely, which may cause data loss 
+	#  Only applies when async chunk loading is enabled
+	# 
+	recoverFromErrors = "default"
+	# (Default: true) Whether to allow POIs (Point of Interest) to be unloaded
+	# Unloaded POIs are reloaded on-demand or when the corresponding chunks are loaded again,
+	# which should not cause any behavior change
+	#  
+	# Note:
+	# Vanilla never unloads POIs when chunks unload, causing small memory leaks
+	# These leaks adds up and eventually cause issues after generating millions of chunks
+	# in a single world instance
+	# 
+	allowPOIUnloading = "default"
+	# (Default: true) This option workarounds MC-276863, a bug that makes mushrooms appear in non-postprocessed chunks
+	# This bug is amplified with notickvd as it exposes non-postprocessed chunks to players
+	# 
+	# This should not affect other worldgen behavior and game mechanics in general
+	# 
+	suppressGhostMushrooms = "default"
 
