Add Mod Menu as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "saves/tss-survival-test-world"]
 	path = saves/tss-survival-test-world
 	url = git@github.com:TheSlimySwamp/survival-test-world.git
+[submodule ".mods/ModMenu"]
+	path = .mods/ModMenu
+	url = git@github.com:TerraformersMC/ModMenu.git
