Rename Mod Menu submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,6 +31,6 @@
 [submodule "saves/tss-survival-test-world"]
 	path = saves/tss-survival-test-world
 	url = git@github.com:TheSlimySwamp/survival-test-world.git
-[submodule ".mods/mod-menu"]
+[submodule "mod-menu"]
 	path = mod-menu
 	url = git@github.com:TerraformersMC/ModMenu.git
