--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "saves/firework-wars-barracks-map"]
 	path = saves/firework-wars-barracks-map
 	url = git@github.com:esotericfoundation/firework-wars-barracks-map.git
+[submodule "saves/firework-wars-town-map"]
+	path = saves/firework-wars-town-map
+	url = git@github.com:esotericfoundation/firework-wars-town-map.git
