--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ config/viafabricplus/viabedrock/blob_cache
 
 # Screenshots
 screenshots
+
+# Worlds - should be saved with submodules anyways
+saves
