--- a/config/viafabricplus/settings.json
+++ b/config/viafabricplus/settings.json
@@ -26,11 +26,7 @@
         "change_game_menu_screen_layout": "adjusted",
         "filter_non_existing_glyphs": true,
         "hide_modern_jigsaw_screen_features": true,
-        "remove_bubble_pop_sound": false,
-        "hide_empty_bubble_icons": false,
-        "hide_villager_profession": false,
         "hide_download_terrain_screen_transition_effects": "disabled",
-        "lock_blocking_arm_rotation": "auto",
         "change_body_rotation_interpolation": "auto",
         "disable_secure_chat_warning": "auto",
         "hide_signature_indicator": "auto",
@@ -41,9 +37,9 @@
         "sneak_instantly": "auto",
         "sideways_backwards_walking": "auto",
         "hide_crafting_recipe_book": "auto",
-        "always_render_crosshair": "auto",
         "emulate_armor_hud": "auto",
         "hide_modern_command_block_screen_features": "auto",
+        "enable_sword_blocking": "auto",
         "swing_hand_on_item_use": "auto",
         "tilt_item_positions": "auto",
         "enable_legacy_tablist": "auto",
