--- a/config/c2me.toml
+++ b/config/c2me.toml
@@ -6,12 +6,12 @@ version = 3
 #            if( is_windows,
 #                (cpus / 1.6 - 2),
 #                (cpus / 1.2 - 2)
-#            )  - if(is_client, 2, 0),
+#            ),
 #            if( is_j9vm,
 #                ( ( mem_gb - (if(is_client, 0.6, 0.2)) ) / 0.4 ),
 #                ( ( mem_gb - (if(is_client, 1.2, 0.6)) ) / 0.6 )
 #            )
-#        )
+#        ) - if(is_client, 2, 0)
 #    )
 # )  
 #  The expression for the default value of global executor parallelism. 
@@ -19,7 +19,7 @@ version = 3
 #  Available variables: is_windows, is_j9vm, is_client, cpus, mem_gb
 # 
 defaultGlobalExecutorParallelismExpression = "default"
-# (Default: 4) Configures the parallelism of global executor
+# (Default: 2) Configures the parallelism of global executor
 globalExecutorParallelism = "default"
 
 [fixes]
@@ -44,10 +44,6 @@ globalExecutorParallelism = "default"
 [clientSideConfig]
 
 	[clientSideConfig.modifyMaxVDConfig]
-		# (Default: true) Whether to modify maximum view distance
-		enabled = "default"
-		# (Default: 43) Max render distance allowed in game options
-		maxViewDistance = "default"
 		# (Default: true) Enable client-side support for extended render distance protocol (c2me:ext_render_distance_v1)
 		# This allows requesting render distances higher than 127 chunks from the server
 		# 
@@ -56,31 +52,42 @@ globalExecutorParallelism = "default"
 		# Note: The server must advertise support this protocol for this to work
 		# 
 		enableExtRenderDistanceProtocol = "default"
+		# (Default: true) Whether to modify maximum view distance
+		enabled = "default"
+		# (Default: 43) Max render distance allowed in game options
+		maxViewDistance = "default"
 
 [noTickViewDistance]
-	# (Default: true) Whether to enable no-tick view distance
-	enabled = "default"
-	# (Default: 8) No-tick view distance max concurrent chunk loads 
-	#  Lower this for a better latency and higher this for a faster loading
-	maxConcurrentChunkLoads = "default"
 	# (Default: true) Whether to use compatibility mode to send chunks 
 	#  This may fix some mod compatibility issues
 	compatibilityMode = "default"
+	# (Default: 4) No-tick view distance max concurrent chunk loads 
+	#  Lower this for a better latency and higher this for a faster loading
+	maxConcurrentChunkLoads = "default"
+	# (Default: false) Whether to ensure correct chunks within normal render distance 
+	#  This will send chunks twice increasing network load
+	ensureChunkCorrectness = "default"
 	# (Default: true) Enable server-side support for extended render distance protocol (c2me:ext_render_distance_v1)
 	# This allows requesting render distances higher than 127 chunks from the server
 	# 
 	# Requires Fabric API (currently available)
 	# 
 	enableExtRenderDistanceProtocol = "default"
-	# (Default: false) Whether to ensure correct chunks within normal render distance 
-	#  This will send chunks twice increasing network load
-	ensureChunkCorrectness = "default"
+	# (Default: true) Whether to enable no-tick view distance
+	enabled = "default"
+	# (Default: 2048) Maximum view distance for no-tick view distance 
+	# 
+	# This allows you to specify the maximum view distance that no-tick view distance can support. 
+	# The maximum supported is 1073741823 and the minimum that make sense is 32, 
+	# This option is purely to save memory, as it needs to reserve memory for the maximum view distance 
+	# 
+	# Note: on the client side, `clientSideConfig.modifyMaxVDConfig.maxViewDistance` should also 
+	# be increased to actually expose the view distance in video settings 
+	# 
+	# 
+	maxViewDistance = "default"
 
 [ioSystem]
-	# (Default: 8192) Soft limit for io worker nbt cache
-	chunkDataCacheSoftLimit = "default"
-	# (Default: 32678) Hard limit for io worker nbt cache
-	chunkDataCacheLimit = "default"
 	# (Default: false) EXPERIMENTAL FEATURE
 	# This replaces the way your chunks are saved.
 	# Please keep regular backups of your world if you are using this feature,
@@ -92,9 +99,19 @@ globalExecutorParallelism = "default"
 	gcFreeChunkSerializer = "default"
 	# (Default: true) Whether to use the optimized implementation of IO system
 	replaceImpl = "default"
+	# (Default: 8192) Soft limit for io worker nbt cache
+	chunkDataCacheSoftLimit = "default"
+	# (Default: 32678) Hard limit for io worker nbt cache
+	chunkDataCacheLimit = "default"
 
 [vanillaWorldGenOptimizations]
-	# (Default: true) Whether to use density function compiler to accelerate world generation
+	# (Default: true) Whether to enable StructureWeightSampler optimizations to accelerate world generation
+	# 
+	optimizeStructureWeightSampler = "default"
+	# (Default: true) Whether to enable aquifer optimizations to accelerate overworld worldgen
+	# (may cause incompatibility with other mods)
+	optimizeAquifer = "default"
+	# (Default: false) Whether to use density function compiler to accelerate world generation
 	# 
 	# Density function: https://minecraft.wiki/w/Density_function
 	# 
@@ -107,17 +124,11 @@ globalExecutorParallelism = "default"
 	# fall back to the unoptimized version of density functions.
 	# 
 	useDensityFunctionCompiler = "default"
-	# (Default: true) Whether to enable aquifer optimizations to accelerate overworld worldgen
-	# (may cause incompatibility with other mods)
-	optimizeAquifer = "default"
 	# (Default: true) Whether to enable End Biome Cache to accelerate The End worldgen 
 	# This is no longer included in lithium-fabric 
 	# (may cause incompatibility with other mods)
 	# 
 	useEndBiomeCache = "default"
-	# (Default: true) Whether to enable StructureWeightSampler optimizations to accelerate world generation
-	# 
-	optimizeStructureWeightSampler = "default"
 
 [generalOptimizations]
 	# (Default: 100000) The task interval of mid-tick chunk tasks in nanoseconds (-1 to disable)  
@@ -132,6 +143,9 @@ globalExecutorParallelism = "default"
 	# Incompatible with Dimensional Threading (dimthread)
 	# 
 	midTickChunkTasksInterval = "default"
+	# (Default: true) Whether to let async chunk request no longer block server thread
+	# (may cause incompatibility with other mods)
+	optimizeAsyncChunkRequest = "default"
 
 	[generalOptimizations.autoSave]
 		# (Default: ENHANCED) Defines how auto save should be handled  
@@ -152,22 +166,6 @@ globalExecutorParallelism = "default"
 	#  Only applies when async chunk loading is enabled
 	# 
 	recoverFromErrors = "default"
-	# (Default: true) Whether to allow POIs (Point of Interest) to be unloaded
-	# Unloaded POIs are reloaded on-demand or when the corresponding chunks are loaded again,
-	# which should not cause any behavior change
-	#  
-	# Note:
-	# Vanilla never unloads POIs when chunks unload, causing small memory leaks
-	# These leaks adds up and eventually cause issues after generating millions of chunks
-	# in a single world instance
-	# 
-	allowPOIUnloading = "default"
-	# (Default: true) This option workarounds MC-276863, a bug that makes mushrooms appear in non-postprocessed chunks
-	# This bug is amplified with notickvd as it exposes non-postprocessed chunks to players
-	# 
-	# This should not affect other worldgen behavior and game mechanics in general
-	# 
-	suppressGhostMushrooms = "default"
 	# (Default: true) Whether to synchronize the management of player tickets
 	# 
 	# In vanilla Minecraft, player tickets are not always removed immediately when players leave an area.
@@ -178,10 +176,20 @@ globalExecutorParallelism = "default"
 	# thus improving compatibility with these contraptions.
 	# 
 	syncPlayerTickets = "default"
-	# (Default: true) Whether to turn fluid postprocessing into scheduled tick
+	# (Default: true) This option workarounds MC-276863, a bug that makes mushrooms appear in non-postprocessed chunks
+	# This bug is amplified with notickvd as it exposes non-postprocessed chunks to players
 	# 
-	# Fluid post-processing is very expensive when loading in new chunks, and this can affect
-	# MSPT significantly. This option delays fluid post-processing to scheduled tick to hopefully
-	# mitigate this issue.
+	# This should not affect other worldgen behavior and game mechanics in general
 	# 
-	fluidPostProcessingToScheduledTick = "default"
+	suppressGhostMushrooms = "default"
+	# (Default: true) Whether to allow POIs (Point of Interest) to be unloaded
+	# Unloaded POIs are reloaded on-demand or when the corresponding chunks are loaded again,
+	# which should not cause any behavior change
+	#  
+	# Note:
+	# Vanilla never unloads POIs when chunks unload, causing small memory leaks
+	# These leaks adds up and eventually cause issues after generating millions of chunks
+	# in a single world instance
+	# 
+	allowPOIUnloading = "default"
+
