--- a/config/modernfix-mixins.properties
+++ b/config/modernfix-mixins.properties
@@ -12,6 +12,7 @@
 # Available options:
 #  mixin.bugfix.chunk_deadlock=false # (overridden for mod compat)
 #  mixin.bugfix.concurrency=true # (default)
+#  mixin.bugfix.ender_dragon_leak=true # (default)
 #  mixin.bugfix.missing_block_entities=false # (default)
 #  mixin.bugfix.packet_leak=false # (default)
 #  mixin.bugfix.paper_chunk_patches=false # (overridden for mod compat)
@@ -34,6 +35,7 @@
 #  mixin.feature.warn_missing_perf_mods=true # (default)
 #  mixin.launch.class_search_cache=true # (default)
 #  mixin.perf.cache_blockstate_cache_arrays=true # (default)
+#  mixin.perf.cache_model_materials=true # (default)
 #  mixin.perf.cache_profile_texture_url=true # (default)
 #  mixin.perf.cache_strongholds=false # (overridden for mod compat)
 #  mixin.perf.chunk_meshing=true # (default)
@@ -55,6 +57,7 @@
 #  mixin.perf.model_optimizations=true # (default)
 #  mixin.perf.mojang_registry_size=true # (default)
 #  mixin.perf.nbt_memory_usage=false # (overridden for mod compat)
+#  mixin.perf.reduce_blockstate_cache_rebuilds=true # (default)
 #  mixin.perf.remove_biome_temperature_cache=true # (default)
 #  mixin.perf.resourcepacks=true # (default)
 #  mixin.perf.state_definition_construct=true # (default)
