Remove accounts.json (may contain sensitive data)

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ config/worldedit/.archive-unpack
 
 # Resource pack data
 data/fabricDefaultResourcePacks.dat
+
+# Sensitive Data
+config/viafabricplus/accounts.json
