--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -860,7 +860,7 @@ minecraft\:block.cherry_wood.fall=true
 minecraft\:block.nether_wood_pressure_plate.click_on=true
 minecraft\:block.decorated_pot.fall=true
 minecraft\:block.candle.extinguish=true
-minecraft\:weather.rain=false
+minecraft\:weather.rain=true
 minecraft\:entity.phantom.ambient=true
 minecraft\:entity.cat.death=true
 minecraft\:block.sand.step=true
@@ -876,7 +876,7 @@ minecraft\:entity.magma_cube.death=true
 minecraft\:item.spyglass.stop_using=true
 minecraft\:entity.donkey.ambient=true
 minecraft\:ui.loom.select_pattern=true
-minecraft\:weather.rain.above=false
+minecraft\:weather.rain.above=true
 minecraft\:entity.breeze.land=true
 minecraft\:block.wooden_door.open=true
 minecraft\:ambient.crimson_forest.loop=true
@@ -1122,7 +1122,7 @@ minecraft\:entity.player.attack.weak=true
 minecraft\:entity.firework_rocket.shoot=true
 minecraft\:block.deepslate_bricks.step=true
 minecraft\:block.cherry_wood_hanging_sign.fall=true
-minecraft\:entity.lightning_bolt.thunder=false
+minecraft\:entity.lightning_bolt.thunder=true
 minecraft\:entity.parrot.ambient=true
 minecraft\:block.cherry_wood.step=true
 minecraft\:block.stem.break=true
@@ -1287,21 +1287,21 @@ minecraft\:block.cave_vines.step=true
 minecraft\:entity.goat.step=true
 minecraft\:entity.firework_rocket.blast_far=true
 minecraft\:music.nether.crimson_forest=true
-minecraft\:item.goat_horn.sound.7=false
-minecraft\:item.goat_horn.sound.6=false
+minecraft\:item.goat_horn.sound.7=true
+minecraft\:item.goat_horn.sound.6=true
 minecraft\:block.sculk_shrieker.place=true
-minecraft\:item.goat_horn.sound.5=false
-minecraft\:item.goat_horn.sound.4=false
+minecraft\:item.goat_horn.sound.5=true
+minecraft\:item.goat_horn.sound.4=true
 minecraft\:block.polished_deepslate.hit=true
 minecraft\:item.bundle.insert=true
 minecraft\:block.nether_bricks.hit=true
 minecraft\:block.metal_pressure_plate.click_on=true
 minecraft\:block.polished_tuff.hit=true
 minecraft\:block.moss.break=true
-minecraft\:item.goat_horn.sound.3=false
-minecraft\:item.goat_horn.sound.2=false
-minecraft\:item.goat_horn.sound.1=false
-minecraft\:item.goat_horn.sound.0=false
+minecraft\:item.goat_horn.sound.3=true
+minecraft\:item.goat_horn.sound.2=true
+minecraft\:item.goat_horn.sound.1=true
+minecraft\:item.goat_horn.sound.0=true
 minecraft\:block.pointed_dripstone.break=true
 minecraft\:block.soul_sand.place=true
 minecraft\:block.nether_wood_button.click_on=true
