Set to reveal hunger when changing

--- a/config/autohud.json5
+++ b/config/autohud.json5
@@ -33,7 +33,7 @@
         policy: "Changing",
     },
     hunger: {
-        policy: "Low",
+        policy: "Changing",
     },
     revealHungerWhenHoldingFoodItem: true,
     air: {
