Set to reveal health when it's not full

--- a/config/autohud.json5
+++ b/config/autohud.json5
@@ -30,7 +30,7 @@
         maximumFade: 0.0,
     },
     health: {
-        policy: "Changing",
+        policy: "NotFull",
     },
     hunger: {
         policy: "Changing",
