Reveal hunger when not full

--- a/config/autohud.json5
+++ b/config/autohud.json5
@@ -33,7 +33,7 @@
         policy: "NotFull",
     },
     hunger: {
-        policy: "Changing",
+        policy: "NotFull",
     },
     revealHungerWhenHoldingFoodItem: true,
     air: {
