Don't hide crosshair with AutoHUD
There is a different mod that does this.

--- a/config/autohud.json5
+++ b/config/autohud.json5
@@ -98,7 +98,7 @@
         active: false,
     },
     crosshair: {
-        active: true,
+        active: false,
         onChange: true,
     },
     crosshairAlwaysVisible: ["minecraft:bow", "minecraft:crossbow", "minecraft:trident"],
