Set to reveal mount health when not full

--- a/config/autohud.json5
+++ b/config/autohud.json5
@@ -56,7 +56,7 @@
         onChange: true,
     },
     mountHealth: {
-        policy: "Changing",
+        policy: "NotFull",
     },
     statusEffects: {
         active: true,
