--- a/config/autohud.json5
+++ b/config/autohud.json5
@@ -23,7 +23,7 @@
         onSwinging: false,
         onAttacking: false,
     },
-    statusEffectTimer: true,
+    statusEffectTimer: false,
     defaultValues: {
         speedMultiplier: 1.0,
         distance: 60,
