--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ coremods
 # Screenshots
 screenshots
 
+# Replay mod recordings
+replay_recordings
+
 # Worlds - should be saved with submodules anyways
 saves
 
