Ignore correct file

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ chesttracker/singleplayer
 .bobby
 config/minihud
 config/litematica
-config./skinshuffle/skin-caches.json
+config/skinshuffle/skin-caches.json
 
 # Jar files
 *.jar
