--- a/config/roughlyenoughitems/config.json5
+++ b/config/roughlyenoughitems/config.json5
@@ -168,7 +168,7 @@
         filtering: {
             filteredStacks: [],
             shouldFilterDisplays: true,
-            filteringRules: ['{id:"roughlyenoughitems:manual",rule:{}}', '{id:"roughlyenoughitems:basic",rule:{}}', '{id:"roughlyenoughitems:hidden_from_recipe_viewers",rule:{}}'],
+            filteringRules: ['{id:"roughlyenoughitems:manual",rule:{}}', '{id:"roughlyenoughitems:basic",rule:{}}'],
         },
     },
 }
