Update special items

--- a/config/worldedit/worldedit.properties
+++ b/config/worldedit/worldedit.properties
@@ -27,7 +27,7 @@ max-radius=-1
 max-super-pickaxe-size=5
 nav-use-glass=true
 nav-wand-distance=50
-nav-wand-item=minecraft\:compass
+nav-wand-item=
 profile=false
 register-help=true
 schematic-save-dir=schematics
@@ -43,4 +43,4 @@ use-in-creative=false
 use-inventory=false
 use-inventory-creative-override=false
 use-inventory-override=false
-wand-item=minecraft\:wooden_axe
+wand-item=minecraft\:wooden_hoe
