Don't hide scoreboard

--- a/config/autohud.json5
+++ b/config/autohud.json5
@@ -79,7 +79,7 @@
     },
     "scoreboard": {
         "scoreboard": {
-            "active": true,
+            "active": false,
             "onChange": true
         },
         "onScoreChange": true,
