Update project information

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "compatiblelicenses",
         "creativecommons",
         "Enderman",
+        "Esoteri",
         "github",
         "orcid",
         "sublicensable",
